components can re-register with a new defFn; dev+reload scripts

--- a/examples/desktop/index.html
+++ b/examples/desktop/index.html
@@ -25,7 +25,8 @@
 
   <script type="importmap">{
     "imports": {
-      "vena": "../../build/runtime.js"
+      "vena": "../../build/runtime.js",
+      "vena/live": "../../build/live.js"
     }
   }</script>
   <script type="module" src="app.js"></script>
