--- a/examples/desktop/index.html
+++ b/examples/desktop/index.html
@@ -25,7 +25,7 @@
 
   <script type="importmap">{
     "imports": {
-      "vena": "../../build/runtime.js",
+      "vena": "../../build/index.js",
       "vena/live": "../../build/live.js"
     }
   }</script>
