restructure for publishing

--- a/examples/project-board/index.html
+++ b/examples/project-board/index.html
@@ -52,9 +52,9 @@
 <body>
   <script type="importmap">{
     "imports": {
-      "vena": "../../build/index.js",
-      "vena/live": "../../build/live.js",
-      "vena/jsx-runtime": "../../build/jsx-runtime.js"
+      "@venajs/core": "https://esm.run/@venajs/core@1.0.2-alpha",
+      "@venajs/jsx-runtime": "./node_modules/@venajs/jsx-runtime/build/jsx-runtime.js",
+      "@venajs/live": "../../packages/core/build/live.js"
     }
   }</script>
   <script type="module" src="build/app.js"></script>
