--- a/examples/desktop/index.html
+++ b/examples/desktop/index.html
@@ -25,8 +25,8 @@
 
   <script type="importmap">{
     "imports": {
-      "vena": "../../build/index.js",
-      "vena/live": "../../build/live.js"
+      "@venajs/core": "https://esm.run/@venajs/core@1.0.2-alpha",
+      "@venajs/live": "../../packages/core/build/live.js"
     }
   }</script>
   <script type="module" src="app.js"></script>
